envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: {address: 0.0.0.0, port_value: 8081}

static_resources:
  listeners:
  - name: grpc-listener
    address:
      socket_address: {address: 0.0.0.0, port_value: 8085}

    filter_chains:
    - filters:

      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: grpc_json
          codec_type: AUTO
          access_log:
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: service-one, timeout: {seconds: 60}}
              # - match: {prefix: "/helloworld.Greeter"}
              #   route: {cluster: service-two, timeout: {seconds: 60}}

          http_filters:

          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              # proto_descriptor_path: "/home/upay/Desktop/envoy/example.pb"
              proto_descriptor: "/etc/envoy/protos/app.pb"
              # services: ["helloworld.Greeter"]
              services: ["app.Book",app.Auth]
              match_incoming_request_route: false
              ignore_unknown_query_parameters: true
              auto_mapping: false
              convert_grpc_status: true
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: true

          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    # - name: service-two
    #   type: LOGICAL_DNS
    #   lb_policy: ROUND_ROBIN
    #   connect_timeout: 0.25s
    #   dns_lookup_family: V4_ONLY
    #   typed_extension_protocol_options:
    #     envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    #       "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    #       explicit_http_config:
    #         http2_protocol_options: { }
    #   load_assignment:
    #     cluster_name: service-two
    #     endpoints:
    #       - lb_endpoints:
    #           - endpoint:
    #               address:
    #                 socket_address:
    #                   address: kong_container
    #                   port_value: 8000

    - name: service-one
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 0.25s
      dns_lookup_family: V4_ONLY
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: { }
      load_assignment:
        cluster_name: service-one
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth-service
                      port_value: 50053
